FEAT():add sell and bug logs